--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,54 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.vscode
+
+# Python and virtualenv
+.Python
+/bin
+/include
+/lib
+
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# compiled output
+client/dist
+client/tmp
+client/out-tsc
+# Only exists if Bazel was run
+client/bazel-out
 
 # dependencies
 client/node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
+# profiling files
+chrome-profiler-events*.json
+speed-measure-plugin*.json
 
-# production
-client/build
+# IDEs and editors
+client/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+client/.sass-cache
+client/connect.lock
+client/coverage
+client/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+client/typings
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# System Files
+.DS_Store
+Thumbs.db
