--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@
 /bin
 /include
 /lib
+*.pyc
+*/__pycache__
+
+# Google api key
+key.json
 
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
