--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --source-map=false --output-path /Users/hidoya/Code/reddit-sentiment/api/nginx/static --watch --output-hashing none",
+    "build": "ng build --output-path /Users/hidoya/Code/reddit-sentiment/api/nginx/static --watch --output-hashing none",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
