Setup docker and AWS configs

--- a/api/docker-compose.prod.yml
+++ b/api/docker-compose.prod.yml
@@ -3,8 +3,8 @@ services:
     static:
         build: ./nginx
         ports:
-            - "1337:80"
-        image: nginx
+            - "80:80"
+        image: hidoya/nginx
         depends_on:
             - web
 
@@ -13,6 +13,6 @@ services:
         env_file:
             - secret.env
         expose:
-            - "8000"
-        image: reddit_sentiment:latest
-        command: gunicorn reddit_sentiment.wsgi:application --bind 0.0.0.0:8000
+            - "8001"
+        image: hidoya/reddit_sentiment
+        command: gunicorn reddit_sentiment.wsgi:application --bind 0.0.0.0:8001
